--- a/main.ui
+++ b/main.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>35</y>
+     <y>25</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>41</x>
-     <y>75</y>
+     <y>65</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -55,7 +55,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>115</y>
+     <y>105</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -74,7 +74,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>155</y>
+     <y>145</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -93,7 +93,7 @@
    <property name="geometry">
     <rect>
      <x>22</x>
-     <y>195</y>
+     <y>185</y>
      <width>87</width>
      <height>25</height>
     </rect>
@@ -112,7 +112,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>230</y>
+     <y>220</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -131,7 +131,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>36</y>
+     <y>26</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -150,7 +150,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>76</y>
+     <y>66</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -169,7 +169,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>116</y>
+     <y>106</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -188,7 +188,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>155</y>
+     <y>145</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -207,7 +207,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>193</y>
+     <y>183</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -226,7 +226,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>231</y>
+     <y>221</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -245,7 +245,7 @@
    <property name="geometry">
     <rect>
      <x>78</x>
-     <y>270</y>
+     <y>260</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -264,7 +264,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>270</y>
+     <y>260</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -283,7 +283,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>269</y>
+     <y>259</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -305,7 +305,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>35</y>
+     <y>25</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -327,7 +327,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>230</y>
+     <y>220</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -349,7 +349,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>75</y>
+     <y>65</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -371,7 +371,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>115</y>
+     <y>105</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -393,7 +393,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>155</y>
+     <y>145</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -415,7 +415,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>192</y>
+     <y>182</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -437,7 +437,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>35</y>
+     <y>25</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -456,7 +456,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>231</y>
+     <y>221</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -475,7 +475,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>75</y>
+     <y>65</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -494,7 +494,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>115</y>
+     <y>105</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -513,7 +513,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>155</y>
+     <y>145</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -532,7 +532,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>193</y>
+     <y>183</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -551,7 +551,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>193</y>
+     <y>183</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -573,7 +573,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>155</y>
+     <y>145</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -595,7 +595,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>35</y>
+     <y>25</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -617,7 +617,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>115</y>
+     <y>105</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -639,7 +639,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>231</y>
+     <y>221</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -661,7 +661,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>75</y>
+     <y>65</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -683,7 +683,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>270</y>
+     <y>260</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -702,7 +702,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>220</y>
+     <y>210</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -715,6 +715,25 @@
    </property>
    <property name="text">
     <string>초기화</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>300</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>맑은 고딕</family>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>ver 1.1</string>
    </property>
   </widget>
  </widget>
